--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>WIPRO ENERGY INSIGHT</title>
+    <title>ENERGY INSIGHT</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -88,7 +88,7 @@
 <div class="container" style="text-align:center;justify-content:center;" id="text">
 <div style="display:none;width:100%" id="myDiv" class="animate-bottom"  >
   <div>
-  <h2>Welcome to WIPRO ENERGY INSIGHT!!!!</h2>
+  <h2>Welcome to ENERGY INSIGHT!!!!</h2>
   <a href="/home"><button class="btn btn-large btn-success"  style="color:#ffffff;">READ ARTICLES</button></a>
 </div>
 </div>
@@ -110,7 +110,7 @@ function showPage() {
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">
-    <a href="/" style="color:#ffffff;">WIPRO ENERGY INSIGHT</a>
+    <a href="/" style="color:#ffffff;">ENERGY INSIGHT</a>
   </div>
   <!-- Copyright -->
 
