--- a/views/subscription.ejs
+++ b/views/subscription.ejs
@@ -3,7 +3,7 @@
     <section class="row mt-5 text-center">
       <div class="col-md-6 m-auto">
         <h1><i class="fas fa-newspaper fa-2x"></i></h1>
-        <h2 class="display-6">SUBSCRIBE TO WIPRO ENERGY INSIGHT!!!</h2>
+        <h2 class="display-6">SUBSCRIBE TO ENERGY INSIGHT!!!</h2>
         <p class="lead">
           Enter your info to get update about posts of your favorite topics!!
         </p>
